# rocm-aic

./: .gitignore  .gitmodules  .hadolint.yaml  .shellcheckrc  .spellcheck.yml  .wordlist.txt  .yamllint  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  deploy.sh  justfile  pyproject.toml  requirements.txt  run-slurm-nixl.sh  run-slurm.sh
.docs-remove/: amd-spur-cluster.md  cliff-cross-gfx-sweep.md  cliff-long-isl-report-postfix.md  cliff-long-isl-report.md  cliff-mi3xx-multimodel.md  cliff-odirect-readpath-gfx942-vs-gfx950.md  cliff-overnight-gfx-sweep.md  cliff-run-67538748-progress.md  cliff-run-67544761-progress.md  cliff-run-67544874-progress.md  cliff-run-analysis.md  cliff-weekend-autotests.md  gpu-kernel-analysis.md  overnight-cliff-report.md  rocm-aic-blog-v0.2.md  vllm-recompute-bug.md
.github/: CODEOWNERS
.github/scripts/: spur-cliff.sh  spur-dist-build.sh  spur-smoke-test.sh  spur-tiny-test.sh
.github/workflows/: aai-day-release-docker.yml  aai-day-release-export.yml  aai-day-release-nightly-wheels.yml  aai-day-release-patches.yml  aic-amd-cliff.yml  aic-amd-dist-build.yml  aic-amd-internal-cicd.yml  aic-amd-nightly-cliff.yml  aic-amd-nightly-dist-build.yml  aic-amd-nightly-smoke-test.yml  aic-amd-nightly-tiny-test.yml  aic-docker.yml  aic-drivenets-config.yml  aic-export.yml  aic-lint.yml  aic-nightly-wheels.yml  aic-patches.yml  aic-spellcheck.yml  kv-cache-tester-shell.yml  lint.yml  llm-agentx-python.yml  llm-agentx-shell.yml  llm-prefill-benchmark-python.yml  llm-prefill-benchmark-shell.yml  lmcache-io-tester.yml  spellcheck.yml  test-amdgpu-dkms.yml  vllm-from-kurt.yml  vllm-lmcache-hipfile-config.yml  vllm-lmcache-hipfile-docker.yml  vllm-lmcache-hipfile-lmcache-patches.yml  vllm-lmcache-hipfile-python.yml  vllm-lmcache-hipfile-shell.yml  vllm-lmcache-nixl-config.yml  vllm-lmcache-nixl-docker.yml  vllm-radeon-config.yml  vllm-radeon-docker.yml  vllm-radeon-lmcache-patches.yml  vllm-radeon-python.yml  vllm-radeon-shell.yml
.slurm/: run-build-distribute.sh  run-cliff.sbatch  run-slurm.sh  run-vllm-lmcache-hipfile.sh  run-vllm-lmcache-nixl.sh  run-vllm-radeon.sh  test-nixl-ais-mt.sbatch  ttft-llamacpp.sbatch  vllm-from-kurt-mi300.sbatch  vllm-lmcache-hipfile.sbatch  vllm-lmcache-nixl.sbatch  vllm-radeon-mi300.sbatch  vllm-radeon.sbatch
.slurm/lib/: nvme_block_io_trace.bt.in  summarize-recipe-job.py  summarize-vllm-lmcache-hipfile-job.py  summarize-vllm-radeon-job.py  vfs_dir_io_trace.bt.in  vllm-lmcache-hipfile-common.sh  vllm-radeon-common.sh
.slurm/scripts/: sync-hf-golden-cache.sh
aai-day-release/: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  prom-metrics-full.txt  pyproject.toml  run-this.sh
aai-day-release/.slurm/: run-build-distribute.sh  run-cliff.sbatch
aai-day-release/ansible/: README.md  ansible.cfg  requirements.yml  site.yml
aai-day-release/benchmarks/: plot_cliff.py  run_cliff.py
aai-day-release/common/nixl/overlay/src/plugins/ais/: ais_backend.h  meson.build
aai-day-release/common/nixl/overlay/src/plugins/ais_mt/: ais_mt_utils.cpp  meson.build
aai-day-release/docker/: Dockerfile  docker-compose.yml
aai-day-release/docs/: cliff-long-isl-report-postfix.md  cliff-long-isl-report.md  overnight-cliff-report.md  vllm-recompute-bug.md
aai-day-release/k8s/: README.md  justfile  prereqs.sh
aai-day-release/monitoring/: docker-compose.monitoring.yml  monitoring-lib.sh
ansible/: README.md  ansible.cfg  discover.yml  provision.yml  requirements.yml  run-fio  site.yml
ansible/inventory/: hosts.yml
ansible/playbooks/: discover.yml  inference-image.yml  kv-cache-tester.yml  lmcache-nfs-rdma-bench.yml  monitoring.yml  nfs-rdma.yml  nvme-of.yml  provision.yml  rdma-network.yml  site.yml
benchmarks/: plot_cliff.py  run_cliff.py  runtime-defaults.yaml  runtime.yaml.example
benchmarks/kv-cache-cliff/: README.md
benchmarks/kv-cache-tester/: Makefile  README.md  requirements.txt
benchmarks/lib/: load-runtime.sh
benchmarks/llm-agentx/: Makefile  README.md  requirements.txt  run-agent-parallel.sh  run-agent.sh
benchmarks/llm-prefill-benchmark/: Makefile  README.md  requirements.txt  run-long-parallel.sh  run-long.sh
benchmarks/ttft-llamacpp/: Dockerfile  README.md  bench_ttft.py  report.py  requirements.txt  ttft_bench.py
benchmarks/ttft-lmcache/: Dockerfile  README.md  bench_ttft.py  requirements.txt
containers/rocm-inference-stack/: Dockerfile  README.md
deployments/: README.md
deployments/common/: config.yaml  prerequisites.justfile
deployments/custom/: README.md
deployments/llm-d/: DESIGN.md  README.md  justfile
docker/: Dockerfile  Dockerfile.upstream  README.md  docker-compose.yml
docker/scripts/: build-nixl.sh  clone-nixl.sh
docs/: ENVIRONMENT.md  METRICS_TELEMETRY.md  PIP_WHEELS.md  QUICK_START.md  SLURM_SPUR.md  architecture.rst  performance.rst
docs/aai-day/: rocm-aic-summary.md  rocm-aic-white-paper.md
grafana/: README.md  rocm-aic-dashboard.json  vllm-dashboard-amd.json
grafana/scripts/: apply-dashboard-improvements.py  dashboard_v2_wire.py  lint-dashboards.py  merge-rocm-aic-dashboard.py  normalize-dashboard.py
monitoring/: docker-compose.monitoring.yml  monitoring-lib.sh
monitoring/ais-snoop/: README.md  ais-snoop.py
monitoring/nvme-exporter/: Dockerfile
monitoring/prometheus/: prometheus.yml
monitoring/rdma-exporter/: Dockerfile
patches/lmcache/: 06-lmcache-hipfile-mp.patch  07-lmcache-nixl-ais-mt-l2-adapter.patch  08-lmcache-nixl-file-size-validation.patch
patches/nixl/: nixl-rocm-ais-mt.patch
recipies/aic-drivenets/: Dockerfile  Makefile  README.md  requirements-lmcache-runtime.txt
recipies/common/nixl/overlay/src/plugins/ais/: ais_backend.cpp  ais_plugin.cpp  ais_utils.cpp  ais_utils.h  meson.build
recipies/common/nixl/overlay/test/unit/plugins/ais_mt/: meson.build
recipies/llm-d/: README.md  justfile
scripts/: check-llm-d-drift.py  common-functions.sh  nfsiostat  rdmastat  setup-submodules.sh  verify-cluster.sh
systemd/: rocm-aic-exporter.service  rocm-aic-exporter.timer
tools/: README.md  amdgpu-dkms-repack.py
(+687 files in other folders)
