# Copyright (c) Advanced Micro Devices, Inc. All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Host-side benchmark and plotting dependencies only.
# The ROCm inference stack (vLLM, LMCache, NIXL, hipFile) lives inside Docker.
#
# Install into the repo-root .venv:
#   make venv
# or manually:
#   pip install -e "[dev]"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rocm-aic"
version = "0.1.0"
description = "AMD Infinity Context (AIC) — KV-cache cliff benchmarks and cliff chart plotter"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "httpx",
    "pyyaml",
    "tqdm",
]

[project.optional-dependencies]
bench = [
    "transformers>=4.40",
    "huggingface-hub>=0.23",
    "prometheus-client>=0.20",
    "aiohttp>=3.9",
]
plot = [
    "matplotlib>=3.8,<4",
    "pandas>=2.0",
    "numpy>=1.26",
]
dev = ["rocm-aic[bench,plot]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks*"]
